--- a/components/landing/styles/Footer.module.css
+++ b/components/landing/styles/Footer.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* margin-top: 5rem; */
 }
 
 .links {
@@ -19,4 +20,10 @@
 
 .links a:hover {
   color: white;
+}
+
+@media screen and (min-width: 900px) {
+  .footer {
+    margin-top: 5rem;
+  }
 }
